syntax = "proto3";

package ihavefood;

option go_package =  "/genproto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "common.proto";


// ---------------------RESTAURANT SERVICE------------------------
// Manages restaurant 
service RestaurantService {

    // ListRestaurant returns a list of all restaurants.
    rpc ListRestaurant(google.protobuf.Empty) returns(ListRestaurantResponse){
        option (google.api.http) = {
            get: "/api/restaurants" 
        };
    }

    // GetRestaurant retrieves the details of a specific restaurant 
    // using the restaurant ID.
    rpc GetRestaurant(GetRestaurantRequest) returns(Restaurant){
        option (google.api.http) = {
            get: "/api/restaurants/{restaurant_id}" 
        };
    }

    // RegisterRestaurant registers a new restaurant.
    rpc RegisterRestaurant(RegisterRestaurantRequest) returns(Restaurant){
        option (google.api.http) = {
            post: "/api/restaurants" 
            body: "*"
        };
    }

    // AddMenu adds new menus to restaurant.
    rpc AddMenu(AddMenuRequest) returns(Restaurant){
        option (google.api.http) = {
            post: "/api/restaurants/{restaurant_id}/menus"
            body: "*"
        };
    }

    // OrderReady is called by the restaurant to notify the server(RestaurantService)
    // that the ordered have been cooked and are ready for delivery.
    rpc OrderReady(OrderReadyRequest) returns (google.protobuf.Empty) {}

}

enum RestaurantStatus{
    CLOSED = 0;
    OPEN = 1;
}

message Restaurant {
    string restaurant_id = 1;
    string name = 2;
    repeated Menu menus = 3;
    Address address = 4;
    RestaurantStatus status = 5;
}

message Menu {
    string food_name = 1;
    int32 price = 2;
}

message GetRestaurantRequest{
    string restaurant_id = 1;
}

message ListRestaurantResponse{
    repeated Restaurant restaurants = 1;
}

message RegisterRestaurantRequest {
    string restaurant_name = 1;
    repeated Menu menus = 2;
    Address address =3;
}

message AddMenuRequest {
    string restaurant_id = 1;
    repeated Menu menus = 2;
}

message OrderReadyRequest {
    string order_id = 1;
    string restaurant_id = 2;
}

